--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,7 @@ margin: 0;
     width: 250px;
     height: 250px;
     top: 3%;
+    left: 32.5%;
   }
   #triangle {
     border-width: 0 160px 250px 160px;
@@ -41,6 +42,7 @@ margin: 0;
     width: 500px;
     height: 500px;
     top: 6%;
+    left: 32.5%;
   }
 
   #triangle {
